# tsukedaicho

./: .gitignore
admin/: .eslintrc.json  .gitignore  README.md  config-overrides.js  deploy.cjs  package.json  tsconfig.json  tsconfig.paths.json  vite.config.ts
admin/.husky/: pre-commit
admin/public/: index.html
admin/src/: App.scss  App.styl  App.tsx  Router.tsx  apolloClientFactory.ts  index.styl  index.tsx  main.tsx  main2.tsx
admin/src/components/: ServerConnectionSetting.tsx  TsukeCalendar.tsx  TsukeList.tsx  UpsertTsuke.modal.tsx  UpsertUser.modal.tsx  UserTable.tsx
admin/src/hooks/: locationChange.ts  queries  spec.util.tsx  tsuke.spec.ts  tsukes.ts  users.spec.ts  users.ts
admin/src/pages/: Summary.page.tsx  SummaryPage.tsx  Top.page.tsx  TopPage.tsx  Tsukes.page.tsx  TsukesPage.tsx  Users.page.tsx  UsersPage.tsx  index.ts
admin/src/types/: deferredResponse.ts  (+5 more)
graphql/: .graphqlconfig  README.md  schema.graphql
graphql/queries/: change_users_order.graphql  create_tsuke.graphql  create_user.graphql  delete_tsuke.graphql  delete_user.graphql  fetch_tsukes_and_users.graphql  fetch_users.graphql  update_tsuke.graphql  update_user.graphql
infra/: README.md  docker-compose.yml
infra/hasura/: config.yaml
infra/postgresql/: 1_create_databases.sql  2_create_tables.sql  3_insert_seed_data.sql  4_duplicate_database_for_test.sql
newadmin/: index.html  package.json  tsconfig.json  vite.config.ts
newadmin/.husky/: pre-commit
newadmin/src/: App.styl  _variable.styl
slack-api/: .gitignore  Cargo.toml  README.md  amd64.Dockerfile  arm64.Dockerfile  build.sh  test.sh
slack-api/src/: lib.rs  logger.rs  main.rs  secrets.rs
slack-api/src/datastore/: module.rs
slack-api/src/datastore/infra/: gql_server_conf.rs  mock.rs  tsukes_repo.rs  users_repo.rs
slack-api/src/datastore/traits/: gql_server_conf.rs  tsukes_repo.rs  users_repo.rs
slack-api/src/datastore/types/: gql_server.rs  tsukes.rs  users.rs
slack-api/src/server/: forms.rs  handler.rs  views.rs
slack-api/src/server/handler/: actions.rs  event.rs  interaction.rs
slack-api/src/server/types/: slack_users.rs
slack-api/src/types/: tsukes.rs  users.rs
(+36 files in other folders)
