[package]
name = "tsukedaicho-slack-api"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
# Common
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.17", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.10"
shaku = "0.6"

# HTTP
http = "0.2"
hyper = { version = "0", features = ["full"] }

# GraphQL
graphql_client = { version = "0.10", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json"] }

# Slack
#slack-morphism = { path = "../../oss/slack-morphism-rust/src/client" }
#slack-morphism-models = { path = "../../oss/slack-morphism-rust/src/models" }
#slack-morphism-hyper = { path = "../../oss/slack-morphism-rust/src/hyper" }
slack-morphism = "0.32"
slack-morphism-models = "0.32"
slack-morphism-hyper = "0.32"

# Dev
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
dotenv = "0"

# https://github.com/dragonflyoss/image-service/commit/81e3ce530963cc86f0ab0d1c8abbcbd6627c89d6
openssl = { version = "0.10.35", features = ["vendored"] }
