[package]
name = "tsukedaicho-slack-api"
version = "1.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
# Common
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.23", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.17"
shaku = "0.6"

# HTTP
http = "0.2"

# GraphQL
graphql_client = { version = "0.10", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json"] }

# Slack
slack-morphism = { version = "1.4", features = ["axum"] }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

# Dev
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
dotenv = "0.15"

# https://github.com/dragonflyoss/image-service/commit/81e3ce530963cc86f0ab0d1c8abbcbd6627c89d6
openssl = { version = "0.10.45", features = ["vendored"] }

[dev-dependencies]
axum-macros = "0.3"
